# gestion-libros

./: .gitignore  README.md
backend/: .env  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routes/: books_routes.py  users_routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: NavBar.tsx
frontend/src/components/misLibros/: BookModal.tsx  BookTable.tsx  DeleteSection.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/interface/: interfaces.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  MainLayout.tsx  MisLibrosPage.tsx  RegisterPage.tsx  WelcomePage.tsx
frontend/src/router/: AppRouter.tsx  ProtectRoute.tsx
frontend/src/services/: api.ts  bookServices.ts  loginServices.ts
